# mo-utils

./: .gitignore  BEdge.hpp  BVect.hpp  CMakeLists.txt  DominanceStatus.hpp  README.md
include/: BEdge.hpp  BVect.hpp  DominanceStatus.hpp
test/: BEdgeTest.cpp  BVectTest.cpp  CMakeLists.txt  DominanceStatusTest.cpp  main.cpp
